tests/baselines/reference/functionCall15.errors.txt
==== tests/cases/compiler/functionCall15.ts (1 errors) ====
    function foo(a?:string, b?:number, ...b:number[]){}
                                       ~~~~~~~~~~~~~
!!! functionCall15.ts(1,36): error TS2000: Duplicate identifier 'b'.